<resources>
    <string name="app_name">GameLog</string>
    <string name="txv_gamelog">GameLog</string>
    <string name="txv_Usuario">Usuario</string>
    <string name="txv_contrasenia">Contraseña</string>
    <string name="btn_recuperar"><u>Recuperar contraseña</u></string>
    <string name="btn_IniciarSesion">Iniciar sesión</string>
    <string name="btn_CrearCuenta">Crear cuenta</string>
    <string name="btn_Invitado">Ingresar como invitado</string>
    <string name="txv_RecuperacionContrasenia">Recuperación de contraseña</string>
    <string name="txv_Correo">Correo</string>
    <string name="btn_AceptarGlobal">Aceptar</string>
    <string name="txv_CodigoVerificacion">Código de verificación</string>
    <string name="btn_Verificar">Verificar</string>
    <string name="txv_CreacionCuenta">Creación de cuenta</string>
    <string name="txv_Nombre">Nombre</string>
    <string name="txv_PrimerApellido">Primer apellido</string>
    <string name="txv_SegundoApellido">Segundo apellido</string>
    <string name="txv_NombreUsuario">Nombre de usuario</string>
    <string name="txv_Descripcion">Descripción</string>
    <string name="btn_Registrar">Registrar</string>
    <string name="btn_Cancelar">Cancelar</string>
    <string name="search_BuscarPerfil">Buscar perfil...</string>
    <string name="search_BuscarJuego">Buscar juego...</string>
    <string name="txv_Calificacion">Calificación</string>
    <string name="txv_Opinion">Opinión</string>
    <string name="edit_Opinion">Escribe tu opinión aquí...(opcional)</string>
    <string name="tab_Todos">Todos</string>
    <string name="tab_Amigos">Amigos</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="msj_correo_invalido">Correo electrónico inválido</string>
    <string name="msj_contrasenia_invalida">Contraseña invalida</string>
    <string name="msj_nombre_invalido">Nombre inválido</string>
    <string name="msj_apellido_invalido">Apellido inválido</string>
    <string name="msj_nombre_usuario_invalido">Solo letras y números, máximo 20 caracteres</string>
    <string name="msj_descripcion_invalido">Máximo 200 caracteres</string>
    <string name="msj_registro_usuario_exitoso">Los datos han sido registrados de manera exitosa</string>

    <string name="msj_fechas_incorrectas">La fecha de inicio debe ser anterior a la fecha de fin</string>
    <string name="msj_seleccion_tendencia_error">Seleccione una opción de tendencia</string>

    <string name="msj_juego_no_encontrado">Juego no encontrado.</string>
    <string name="msj_error_conexion">Error de conexión</string>
    <string name="msj_jugador_no_encontrado">Jugador no encontrado.</string>
    <string name="msj_volver_inicio_sesion">No autorizado. Inicia sesión nuevamente.</string>

    <string name="msj_correo_nombre_usuario_registrado_anteriormente">El correo o nombre de usuario ya está registrado.</string>
    <string name="msj_error_conexion_bd">Error de conexión con la base de datos.</string>
    <string name="msj_error_conexion_servidor">No se pudo conectar con el servidor. Verifica tu conexión a internet.</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="buscar_juego">Buscar juego</string>
    <string name="buscar_perfil">Buscar perfil</string>
    <string name="mis_resenias">Mis reseñas</string>
    <string name="edicion_perfil">Editar perfil</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="opciones">Opciones</string>
    <string name="title_activity_scrolling_historial_resenia">ScrollingHistorialResenia</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_scrolling_informacion_juego">ScrollingInformacionJuego</string>
    <string name="lbl_TituloJuego">Título de juego</string>
    <string name="lbl_AnioLanzamiento">Año de lanzamiento</string>
    <string name="lbl_Calificacion">Calificación</string>
    <string name="lbl_Disponibilidad">Disponible en:</string>
    <string name="lbl_Reseñar">Reseñar</string>
    <string name="lbl_VerResenias">Ver reseñas</string>
    <string name="lbl_Descripcion">Descripción</string>
    <string name="txv_EditarPerfil">Editar perfil</string>
    <string name="btn_GuardarGlobal">Guardar</string>
    <string name="msj_revival_retro">El reporte seleccionado muestra los juegos retros más reseñados por la comunidad de acuerdo a las fechas seleccionadas, dichos juegos han generado nostalgia y recuerdos dentro de la comunidad gamer.</string>
    <string name="msj_juegos_mas_reseniados">El reporte seleccionado muestra los juegos más reseñados por la comunidad de acuerdo a las fechas seleccionadas, dichos juegos han generado popularidad y relevancia dentro de la comunidad gamer.</string>
    <string name="rb_RevivalRetro">Revival retro</string>
    <string name="rb_JuegosMasReseniados">Juegos más reseñados</string>
    <string name="msj_seleccionar_fecha">Seleccionar fecha</string>
    <string name="msj_fecha_inicio_consulta">Fecha de inicio de periodo de consulta:</string>
    <string name="msj_fecha_fin_consulta">Fecha de fin de periodo de consulta:</string>
</resources>