<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_busqueda_juego"
            android:icon="@drawable/ic_busqueda_juego"
            android:title="@string/buscar_juego" />
        <item
            android:id="@+id/nav_busqueda_perfil"
            android:icon="@drawable/ic_busqueda_perfil"
            android:title="@string/buscar_perfil" />
        <item
            android:id="@+id/nav_historial_resenia"
            android:icon="@drawable/ic_resenias"
            android:title="@string/mis_resenias" />

        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_cerrar_sesion"
            android:title="@string/cerrar_sesion" />
    </group>
</menu>