<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ReseniaJuego"
        android:background="@color/gray"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txv_Calificacion"
            android:textColor="@color/white"
            android:textSize="50sp"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txv_Opinion"
            android:textColor="@color/white"
            android:textSize="50sp"/>

        <EditText
            android:id="@+id/edit_opinion"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_Opinion"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:gravity="top|start"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/btn_Cancelar"
                android:textSize="25sp"
                android:width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/btn_AceptarGlobal"
                android:textSize="25sp"
                android:width="0dp"
                android:layout_weight="1"/>


        </LinearLayout>



    </LinearLayout>
</layout>