<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreacionCuenta"
        android:background="@color/gray"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txv_CreacionCuenta"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="50sp"
            android:fontFamily="@font/bangers"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="15dp"
                android:background="@color/white"
                android:hint="@string/txv_Nombre"
                android:textStyle="bold"
                android:maxLength="80"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_primer_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="15dp"
                android:background="@color/white"
                android:hint="@string/txv_PrimerApellido"
                android:maxLength="80"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_segundo_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="15dp"
                android:background="@color/white"
                android:hint="@string/txv_SegundoApellido"
                android:maxLength="80"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_nombre_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="15dp"
                android:background="@color/white"
                android:hint="@string/txv_NombreUsuario"
                android:maxLength="20"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/txv_Descripcion"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:maxLength="200"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="15dp"
                android:background="@color/white"
                android:hint="@string/txv_Correo"
                android:maxLength="255"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_contrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="15dp"
                android:background="@color/white"
                android:hint="@string/txv_contrasenia"
                android:maxLength="255"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_registrar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/btn_Registrar"
                android:width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/btn_cancelar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/btn_Cancelar"
                android:width="0dp"
                android:layout_weight="1"
                android:textSize="25sp"/>


        </LinearLayout>

    </LinearLayout>
</layout>