<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:background="@color/gray"
        android:padding="15dp"
        app:endIconMode="password_toggle">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/gamelog_logo"
            android:layout_gravity="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="15dp"
                android:background="@color/white"
                android:hint="@string/txv_Usuario"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_contrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="15dp"
                android:background="@color/white"
                android:hint="@string/txv_contrasenia"
                android:textStyle="bold"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_recuperar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_recuperar"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:padding="10dp"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/btn_iniciar_sesion"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_IniciarSesion"
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/btn_crear_cuenta"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/btn_CrearCuenta"
            android:textSize="25sp" />
    </LinearLayout>
</layout>